--- a/static/assets/sass/layouts/_blog-details.scss
+++ b/static/assets/sass/layouts/_blog-details.scss
@@ -28,9 +28,9 @@
   }
 }
 //sticky social link
-.sticky-social-menu {
+.sticky-social-menu, .wizerd-items {
   position: sticky;
-  top: 130px;
+  top: 110px;
   z-index: 99;
 }
 
