--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -1,22 +1,26 @@
 // blog page 2022
 .hero-area-blog {
   .single-blog-carousel {
-    display: none;
+    // display: none;
 
     &.show {
       display: flex;
     }
+
     .blog-title-content {
       padding-left: 40px;
     }
   }
+
   .blog-banner {
     // background-color: #333333;
     background-image: url(/assets/images/bg-image/pattern-bg.png);
+
     img {
       object-fit: contain;
     }
   }
+
   .blog-title-content {
     h1 {
       font-style: normal;
@@ -25,6 +29,7 @@
       line-height: 130%;
       letter-spacing: -0.5px;
       margin-bottom: 15px;
+
       a {
         color: $ac-color-heading;
       }
@@ -39,6 +44,7 @@
 
     .social-share {
       margin-top: 40px;
+
       label {
         font-style: normal;
         font-weight: 600;
@@ -51,6 +57,7 @@
     }
   }
 }
+
 button.slide {
   background: #fff;
   border: none;
@@ -63,9 +70,11 @@ button.slide {
   justify-content: center;
   cursor: pointer;
 }
+
 .hero-area-thumbnail {
   position: relative;
   z-index: 1;
+
   .slider-button {
     position: absolute;
     right: -40px;
@@ -73,9 +82,11 @@ button.slide {
     margin-top: -40px;
   }
 }
+
 button.slide img {
   width: 30px;
 }
+
 a.inline-button {
   font-weight: 600;
   font-size: 14px;
@@ -84,6 +95,7 @@ a.inline-button {
   color: #1c1c1c;
   position: relative;
   z-index: 1;
+
   &:after {
     position: absolute;
     content: "";
@@ -94,25 +106,31 @@ a.inline-button {
     background-color: $ac-color-heading;
     transition: 0.3s ease-in-out;
   }
+
   &:hover {
     &:after {
       width: 100%;
     }
   }
+
   i.fa {
     padding-left: 0.5rem;
   }
 }
+
 .meta {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+
   i.fa {
     color: #555555;
     margin-right: 0.3rem;
   }
+
   .author {
     margin-right: 30px;
+
     a {
       font-weight: 400;
       font-size: 16px;
@@ -132,17 +150,21 @@ a.inline-button {
     }
   }
 }
+
 ul.social-share-button {
   padding: 0;
   display: flex;
   align-items: center;
+
   &.is-flex-direction-column {
     align-items: flex-start;
+
     li {
       margin-right: 0;
       margin-bottom: 1rem;
     }
   }
+
   li {
     list-style: none;
     margin: 0;
@@ -152,6 +174,7 @@ ul.social-share-button {
     justify-content: center;
     border-radius: 50%;
     margin-right: 1rem;
+
     a {
       width: 46px;
       height: 46px;
@@ -161,26 +184,33 @@ ul.social-share-button {
       display: flex;
       align-items: center;
       justify-content: center;
+
       &:hover {
         i.fa {
           animation: icon-animation 0.9s both;
         }
       }
+
       &.twitter {
         background-color: #1da1f2;
       }
+
       &.github {
         background-color: #171516;
       }
+
       &.linkedin {
         background-color: #0a66c2;
       }
+
       &.facebook {
         background-color: #4867aa;
       }
+
       &.envelope {
         background-color: #4285f4;
       }
+
       i.fa {
         font-size: 1rem;
       }
@@ -190,6 +220,12 @@ ul.social-share-button {
 
 .search-filter-area {
   margin: 30px 0;
+  margin: 30px 0;
+  position: sticky;
+  top: 60px;
+  z-index: 99;
+  background: #fff;
+
   .filter-wrapper {
     border: 1px solid $ac-white-light;
     border-radius: 4px;
@@ -198,6 +234,7 @@ ul.social-share-button {
     justify-content: space-between;
     padding: 10px 30px;
   }
+
   .search-area {
     .fa {
       font-size: 22px;
@@ -211,11 +248,13 @@ ul.social-share-button {
       font-weight: 500;
       padding-right: 1rem;
       color: $ac-color-heading;
+
       &:focus {
         outline: none;
         border: none;
         box-shadow: none;
       }
+
       &::placeholder {
         font-weight: 400;
         font-size: 16px;
@@ -230,6 +269,7 @@ ul.social-share-button {
 
   .filter-area {
     display: flex;
+
     select {
       width: 100px;
       border: none;
@@ -245,6 +285,7 @@ ul.social-share-button {
     .viewing-mode {
       display: flex;
       align-items: center;
+
       label {
         font-weight: 600;
         font-size: 14px;
@@ -265,12 +306,16 @@ ul.social-share-button {
         display: flex;
         align-items: center;
         justify-content: center;
+        cursor: pointer;
+
         span {
           font-size: 20px;
         }
+
         &:last-child {
           margin-right: 0;
         }
+
         &.is-active {
           background-color: $ac-primary;
           color: $ac-white;
@@ -283,8 +328,12 @@ ul.social-share-button {
 .blog-items-area {
   .left-sidebar {
     margin-right: 30px;
+    position: sticky;
+    top: 170px;
+
     .collapsable-menu {
       margin-bottom: 30px;
+
       button {
         border: none;
         background-color: transparent;
@@ -304,6 +353,7 @@ ul.social-share-button {
 
       .ac-single-checkbox {
         margin-bottom: 10px;
+
         .is-checkradio {
           margin-right: 10px;
         }
@@ -318,6 +368,7 @@ ul.social-share-button {
     }
   }
 }
+
 .single-blog {
   border: 1px solid $ac-white-light;
   border-radius: 4px;
@@ -327,22 +378,26 @@ ul.social-share-button {
 
   &:hover {
     border: 1px solid $ac-primary;
+
     a {
       img {
         transform: scale(1.05);
       }
     }
+
     h2 {
       a {
         color: $ac-primary;
       }
     }
+
     a.inline-button {
       &:after {
         width: 100%;
       }
     }
   }
+
   a {
     img {
       object-fit: cover;
@@ -355,6 +410,7 @@ ul.social-share-button {
     justify-content: space-between;
 
     flex-wrap: wrap;
+
     .author {
       a {
         font-size: 14px;
@@ -374,6 +430,7 @@ ul.social-share-button {
     line-height: 130%;
     margin-bottom: 15px;
     transition: 0.3s ease-in-out;
+
     a {
       color: $ac-color-heading;
     }
@@ -390,31 +447,37 @@ ul.social-share-button {
 .blog-items {
   .blog-title-content {
     padding-left: 20px;
+
     &:hover {
       h2 {
         a {
           color: $ac-primary;
         }
       }
+
       a.inline-button {
         &:after {
           width: 100%;
         }
       }
     }
+
     .meta {
       margin-bottom: 10px;
     }
+
     h2 {
       font-weight: 700;
       font-size: 24px;
       line-height: 130%;
       letter-spacing: -1px;
       margin-bottom: 15px;
+
       a {
         color: $ac-color-heading;
       }
     }
+
     p {
       margin-bottom: 20px;
     }
@@ -535,6 +598,7 @@ ul.social-share-button {
   position: relative;
   z-index: 1;
   margin-left: -8px;
+
   &:before {
     position: absolute;
     content: "";
@@ -546,6 +610,7 @@ ul.social-share-button {
     padding-left: 5px;
     border-radius: 2px;
   }
+
   h3 {
     font-size: 22px;
     font-weight: 700;
@@ -558,6 +623,7 @@ ul.social-share-button {
 .blog-category {
   height: calc(100vh - 150px);
   overflow-y: auto;
+
   &::-webkit-scrollbar {
     border-radius: 50px;
     width: 0px;
@@ -626,6 +692,7 @@ ul.social-share-button {
   &:hover::-ms-scrollbar-corner {
     height: 40px;
   }
+
   ul {
     li {
       a {
@@ -651,32 +718,27 @@ ul.social-share-button {
                   Full HD Min Width 1407
 **************************************************************** */
 /* Full HD Min Width 1408px */
-@media (min-width: 1408px) {
-}
+@media (min-width: 1408px) {}
 
 /**************************************************************** 
                   Widescreen Between 1216px and 1407px
 **************************************************************** */
-@media (min-width: 1216px) and (max-width: 1407px) {
-}
+@media (min-width: 1216px) and (max-width: 1407px) {}
 
 /**************************************************************** 
                   Desktop Between 1024px and 1215px
 **************************************************************** */
-@media (min-width: 1024px) and (max-width: 1215px) {
-}
+@media (min-width: 1024px) and (max-width: 1215px) {}
 
 /**************************************************************** 
                   Tablet Between 769px and 1023px
 **************************************************************** */
-@media (min-width: 769px) and (max-width: 1023px) {
-}
+@media (min-width: 769px) and (max-width: 1023px) {}
 
 /**************************************************************** 
                     Mobile Up to 768px. 
 **************************************************************** */
-@media only screen and (min-width: 100px) and (max-width: 768px) {
-}
+@media only screen and (min-width: 100px) and (max-width: 768px) {}
 
 /*=================================================================================================
                                     Responsive code end
