--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -137,7 +137,7 @@
           <!-- collapsable menu start  -->
           <div class="collapsable-menu">
             <button>PRODUCTS <i class="fa fa-angle-up"></i></button>
-            <div class="checkbox-wrapper">
+            <div class="checkbox-wrapper" id="products">
 
 
               <!-- single ac-checkbox start  -->
@@ -174,7 +174,7 @@
           <!-- collapsable menu start  -->
           <div class="collapsable-menu">
             <button>CATEGORIES <i class="fa fa-angle-up"></i></button>
-            <div class="checkbox-wrapper">
+            <div class="checkbox-wrapper" id="categories">
               <!-- single ac-checkbox start  -->
               <div class="ac-single-checkbox">
                 <input class="is-checkradio ac-checkbox" id="alert" type="checkbox" name="checkbox" />
