Add show and hide btn functionality
Signed-off-by: Al Asad Nur Riyad <asadnurriyad@appscode.com>

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -136,7 +136,7 @@
         <div class="left-sidebar">
           <!-- collapsable menu start  -->
           <div class="collapsable-menu">
-            <button>PRODUCTS <i class="fa fa-angle-up"></i></button>
+            <button id="product-btn">PRODUCTS <i class="fa fa-angle-up"></i></button>
             <div class="checkbox-wrapper" id="products">
 
 
@@ -173,7 +173,7 @@
 
           <!-- collapsable menu start  -->
           <div class="collapsable-menu">
-            <button>CATEGORIES <i class="fa fa-angle-up"></i></button>
+            <button id="categories-btn">CATEGORIES <i class="fa fa-angle-up"></i></button>
             <div class="checkbox-wrapper" id="categories">
               <!-- single ac-checkbox start  -->
               <div class="ac-single-checkbox">
