--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -136,8 +136,8 @@
         <div class="left-sidebar">
           <!-- collapsable menu start  -->
           <div class="collapsable-menu">
-            <button>PRODUCTS <i class="fa fa-angle-up"></i></button>
-            <div class="checkbox-wrapper">
+            <button id="product-btn">PRODUCTS <i class="fa fa-angle-up"></i></button>
+            <div class="checkbox-wrapper" id="products">
 
 
               <!-- single ac-checkbox start  -->
@@ -173,8 +173,8 @@
 
           <!-- collapsable menu start  -->
           <div class="collapsable-menu">
-            <button>CATEGORIES <i class="fa fa-angle-up"></i></button>
-            <div class="checkbox-wrapper">
+            <button id="categories-btn">CATEGORIES <i class="fa fa-angle-up"></i></button>
+            <div class="checkbox-wrapper" id="categories">
               <!-- single ac-checkbox start  -->
               <div class="ac-single-checkbox">
                 <input class="is-checkradio ac-checkbox" id="alert" type="checkbox" name="checkbox" />
